fixed off centered inbox

--- a/src/shared-features/App.css
+++ b/src/shared-features/App.css
@@ -97,6 +97,7 @@ body {
   height: calc(80vh - 80px);
   margin-left: auto;
   margin-right: auto;
+  width: 95%;
 }
 
 .header-row .header-title {
@@ -116,7 +117,6 @@ body {
   background-color: #f5f5f5;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
 }
 
 .inbox-style {
